Had to change some things around

--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "makechat",
+  "name": "make-chat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Rasenku/MakeChat.git"
-  },
-  "author": "",
+  "keywords": [],
+  "author": "Dahveyea Cowan",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rasenku/MakeChat/issues"
-  },
-  "homepage": "https://github.com/Rasenku/MakeChat#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.3.1",
-    "mongoose": "^5.12.7",
-    "socket.io": "^4.0.1"
+    "express-handlebars": "^5.2.0",
+    "mongoose": "^5.10.15",
+    "socket.io": "^3.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
